fix:input validation according to QA//fix:overflowing edit section solved

--- a/src/Component/DataTable/DataTable.css
+++ b/src/Component/DataTable/DataTable.css
@@ -53,7 +53,7 @@ ol li {
   position: relative;
 }
 .category_edit--row {
-  padding: 1rem 0.69rem;
+  /* padding: 1rem 0.69rem; */
 }
 .category__buttons {
   display: flex;
@@ -61,8 +61,9 @@ ol li {
 }
 
 .universal__update--form {
-  position: relative;
-  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 /* .Universal__update--form input{
   width: 100%;
@@ -70,22 +71,29 @@ ol li {
 } */
 .universal__FormButton {
   display: flex;
-  justify-content: center;
+  justify-content: flex-end;
   align-items: center;
-  position: absolute;
   height: 100%;
-  width: fit-content;
+  width: 20%;
   color: #fff;
   cursor: pointer;
-  right: 5px;
-  top: 0;
 }
+
+.universal__input--container {
+  width: 75%;
+}
+
 .universal__table--input {
   border: none;
-  padding: 5px 0px;
+  padding: 5px 4px;
   outline: none;
   font-size: 14px;
 }
+
+.universal__table--input input {
+  width: 70%;
+}
+
 .universal__table--input:focus {
   outline: none !important;
 }
@@ -95,19 +103,21 @@ ol li {
 }
 .universal__td--border {
   border: 1px solid var(--blue);
+  padding: 0 !important;
 }
 
 .universal__FormButton button {
   background-color: transparent;
   color: black;
+  padding: 0 !important;
 }
 .universal__FormButton button:first-child {
   border-right: 1px solid grey;
   border-radius: 0px;
+  padding-right: 13px !important;
   color: var(--toast-success-border);
-  padding-left: 3px;
 }
 .universal__FormButton button:nth-child(2) {
   color: var(--red);
-  padding-right: 3px;
+  padding-right: 13px !important;
 }
